src/snapshots/martian_robots__parser__test__error_over_50.snap
---
source: src/parser.rs
assertion_line: 107
expression: robot_commands
---
Err(
    "Grid provided is incorrect, 51, 51",
)
