src/snapshots/martian_robots__parser__test__generate_robots_from_strs.snap
---
source: src/parser.rs
assertion_line: 174
expression: robots
---
[
    Robot {
        position: RobotPosition {
            coordinates: Coordinates {
                x: 3,
                y: 2,
            },
            orientation: North,
        },
        robot_commands: [
            Forward,
            Right,
            Right,
            Forward,
            Left,
            Left,
            Forward,
            Forward,
            Right,
            Right,
            Forward,
            Left,
            Left,
        ],
    },
]
