src/snapshots/martian_robots__parser__test__generate_robots_from_strs_two_robots.snap
---
source: src/parser.rs
assertion_line: 154
expression: robots
---
[
    RobotInfo {
        start_position: RobotPosition {
            coordinates: Coordinates {
                x: 1,
                y: 1,
            },
            orientation: East,
        },
        robot_commands: [
            Right,
            Forward,
            Right,
            Forward,
            Right,
            Forward,
            Right,
            Forward,
        ],
    },
    RobotInfo {
        start_position: RobotPosition {
            coordinates: Coordinates {
                x: 3,
                y: 2,
            },
            orientation: North,
        },
        robot_commands: [
            Forward,
            Right,
            Right,
            Forward,
            Left,
            Left,
            Forward,
            Forward,
            Right,
            Right,
            Forward,
            Left,
            Left,
        ],
    },
]
