src/snapshots/martian_robots__parser__test__parse_input_commands.snap
---
source: src/parser.rs
assertion_line: 95
expression: robot_commands
---
Command {
    upper_right: Coordinates {
        x: 5,
        y: 3,
    },
    robot_commands: [
        Robot {
            position: RobotPosition {
                coordinates: Coordinates {
                    x: 3,
                    y: 2,
                },
                orientation: North,
            },
            robot_commands: [
                Forward,
                Right,
                Right,
                Forward,
                Left,
                Left,
                Forward,
                Forward,
                Right,
                Right,
                Forward,
                Left,
                Left,
            ],
        },
    ],
}
