src/snapshots/martian_robots__parser__test__parse_multiple_commands.snap
---
source: src/parser.rs
assertion_line: 112
expression: robot_commands
---
Command {
    upper_right: Coordinates {
        x: 5,
        y: 3,
    },
    robot_commands: [
        Robot {
            position: RobotPosition {
                coordinates: Coordinates {
                    x: 1,
                    y: 1,
                },
                orientation: East,
            },
            robot_commands: [
                Right,
                Forward,
                Right,
                Forward,
                Right,
                Forward,
                Right,
                Forward,
            ],
        },
        Robot {
            position: RobotPosition {
                coordinates: Coordinates {
                    x: 3,
                    y: 2,
                },
                orientation: North,
            },
            robot_commands: [
                Forward,
                Right,
                Right,
                Forward,
                Left,
                Left,
                Forward,
                Forward,
                Right,
                Right,
                Forward,
                Left,
                Left,
            ],
        },
        Robot {
            position: RobotPosition {
                coordinates: Coordinates {
                    x: 0,
                    y: 3,
                },
                orientation: West,
            },
            robot_commands: [
                Left,
                Left,
                Forward,
                Forward,
                Forward,
                Left,
                Forward,
                Left,
                Forward,
                Left,
            ],
        },
    ],
}
