src/snapshots/martian_robots__parser__test__parsing_multiple_robot_commands.snap
---
source: src/parser.rs
assertion_line: 138
expression: robot_commands
---
[
    Robot {
        position: RobotPosition {
            coordinates: Coordinates {
                x: 1,
                y: 1,
            },
            orientation: East,
        },
        robot_commands: [
            Right,
            Forward,
            Right,
            Forward,
            Right,
            Forward,
            Right,
            Forward,
        ],
        robot_status: Alive,
    },
    Robot {
        position: RobotPosition {
            coordinates: Coordinates {
                x: 3,
                y: 2,
            },
            orientation: North,
        },
        robot_commands: [
            Forward,
            Right,
            Right,
            Forward,
            Left,
            Left,
            Forward,
            Forward,
            Right,
            Right,
            Forward,
            Left,
            Left,
        ],
        robot_status: Alive,
    },
]
