src/snapshots/martian_robots__parser__test__parsing_robot_commands.snap
---
source: src/parser.rs
assertion_line: 124
expression: robot_commands
---
[
    Robot {
        position: RobotPosition {
            coordinates: Coordinates {
                x: 3,
                y: 2,
            },
            orientation: North,
        },
        robot_commands: [
            Forward,
            Right,
            Right,
            Forward,
            Left,
            Left,
            Forward,
            Forward,
            Right,
            Right,
            Forward,
            Left,
            Left,
        ],
        robot_status: Alive,
    },
]
